Mejoras en la gestión del calendario: optimización de métodos y validación de userId